--- a/requirementss.txt
+++ b/requirementss.txt
@@ -1,20 +1,24 @@
 alembic==1.11.2
-bcrypt==4.0.1
+blinker==1.6.2
 cachelib==0.10.2
 click==8.1.6
+dnspython==2.4.2
 email-validator==2.0.0.post2
 Flask==2.3.2
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.5.3
+Flask-Login==0.6.2
 Flask-Migrate==4.0.4
+Flask-Session==0.5.0
 Flask-SQLAlchemy==3.0.5
 Flask-Uploads==0.2.1
+Flask-WTF==1.1.1
 greenlet==2.0.2
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
-MarkupSafe==2.1.3
+MarkupSafe==2.1.3w
 mysqlclient==2.2.0
 PyJWT==2.8.0
 python-dotenv==1.0.0
@@ -22,4 +26,3 @@ SQLAlchemy==2.0.19
 typing_extensions==4.7.1
 Werkzeug==2.3.6
 WTForms==3.0.1
-Flask-DebugToolbar==0.11.0
